--- a/index.liquid
+++ b/index.liquid
@@ -1,11 +1,11 @@
 ---
 layout: layout.liquid
-title: Name Generator
+title: Fantasy Name Generator
 ---
 
 <div class="flex-container">
   <div class="content">
-    <h1 class="page-title">Name Generator</h1>
+    <h1 class="page-title">Fantasy Name Generator</h1>
     
     <!-- Random Name Generator Component -->
     <div class="name-generator" x-data="randomName()">
