--- a/styles/screen.css
+++ b/styles/screen.css
@@ -1,6 +1,13 @@
 /* Base body styles without a background image */
+@font-face {
+  font-family: 'Wizard';
+  src: url("/fonts/WizardryNight.ttf") format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
 body {
-  font-family: 'Georgia', serif;
+  font-family: 'Wizard', serif;
   margin: 0;
   padding: 0;
   display: flex;
@@ -18,7 +25,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background: url('/images/\ -70.jpg') no-repeat center center fixed;
+  background: url("/images/\ -70.jpg") no-repeat center center fixed;
   background-size: cover;
   filter: blur(8px);
   z-index: -1; /* Place behind the content */
