--- a/index.liquid
+++ b/index.liquid
@@ -29,7 +29,17 @@ title: Fantasy Name Generator
         "Dorian the Daring",
         "Isolde the Illustrious",
         "Garrick the Gallant",
-        "Seraphine the Serene"
+        "Seraphine the Serene",
+        "Quinne the Swift",
+        "Chloe the Mystic",
+        "Avary the Valiant",
+        "Lorian the Shadowborn",
+        "Celestine the Arcane",
+        "Thorne the Ironheart",
+        "Evelyn the Moonlit",
+        "Draven the Duskwalker",
+        "Fiora the Flamekeeper",
+        "Merrick the Whispering"
       ],
       currentName: "",
       // Function to randomly select a name
