--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{{ Fantasy Name Generator }}</title>
+    <title>{{ title }}</title>
     <!-- Link to your custom CSS file -->
     <link rel="stylesheet" href="/styles/screen.css" />
     <!-- Include Alpine.js for interactivity -->
