--- a/index.liquid
+++ b/index.liquid
@@ -8,7 +8,7 @@ title: Skyrim Character Generator
     <h1 class="page-title">Skyrim Character Generator</h1>
     
     <div class="name-generator" x-data="randomName()">
-      <h2 class="name-display" x-text="currentName || 'Click the button to generate a name!'"></h2>
+      <h2 class="name-display" x-text="currentName || 'Click the button to generate a name'"></h2>
       <button class="name-button" @click="generateName()">Generate Name</button>
     </div>
     
@@ -16,7 +16,7 @@ title: Skyrim Character Generator
     
     <div class="name-generator" x-data="randomRace()">
       <h3 class="page-title" style="font-size:2.5rem; margin-bottom:0.5rem;">Race</h3>
-      <h2 class="name-display" x-text="currentRace || 'Click the button to generate a race!'"></h2>
+      <h2 class="name-display" x-text="currentRace || 'Click the button to generate a race'"></h2>
       <button class="name-button" @click="generateRace()">Generate Race</button>
     </div>
     
@@ -24,7 +24,7 @@ title: Skyrim Character Generator
     
     <div class="name-generator" x-data="randomMagicka()">
       <h3 class="page-title" style="font-size:2.5rem; margin-bottom:0.5rem;">Magicka Class</h3>
-      <h2 class="name-display" x-text="currentMagicka || 'Click the button to generate a Magicka Class!'"></h2>
+      <h2 class="name-display" x-text="currentMagicka || 'Click the button to generate a Magicka Class'"></h2>
       <button class="name-button" @click="generateMagicka()">Generate Magicka Class</button>
     </div>
     
