--- a/index.liquid
+++ b/index.liquid
@@ -8,6 +8,7 @@ title: Skyrim Character Generator
     <h1 class="page-title">Skyrim Character Generator</h1>
     
     <div class="name-generator" x-data="randomName()">
+      <h3 class="page-title" style="font-size:2.5rem; margin-bottom:0.5rem;">Name</h3>
       <h2 class="name-display" x-text="currentName || 'Click the button to generate a name'"></h2>
       <button class="name-button" @click="generateName()">Generate Name</button>
     </div>
